<resources>
    <string name="app_name">CBT-FOLLOWUP</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="end_interview"> اختتام </string>
    <string name="next_section"> اگلا سیکشن</string>
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="other">دیگر وضاحت کریں</string>
    <string name="dkn">معلوم نہیں</string>
    <string name="yes">ہاں</string>
    <string name="no">نہیں</string>
    <string name="na">قابل اطلاق نہیں</string>
    <string name="reason">سبب</string>
    <string name="male">Male </string>
    <string name="female">Female</string>
    <string name="year"> Year </string>
    <string name="month">مہینہ </string>
    <string name="day">دن</string>
    <string name="cm"> cm </string>
    <string name="kg"> kg </string>
    <string name="secC01"> جلد کی بیماریاں </string>
    <string name="complete">complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="status">Interview status</string>
    <string name="section_A">Identification </string>
    <string name="section_B">Child Current Status</string>
    <string name="section_C">Anthropometry</string>
    <string name="section_D">Compliance Assessment of specialized Nutriious Food(SNF)-[For Arm 4 and 5]</string>
    <string name="section_E">Bisp Cash Transfer-[For Arms 2-5]</string>
    <string name="section_F">Behaviour Change Communication(BCC)</string>
    <string name="section_G">Child Morbidity and care Seeking</string>
    <string name="section_H">Infant and Young Child Feeding(IYCF)</string>
    <string name="section_I">Form Completion</string>
    <string name="section_J">Supervisory Checks</string>
    <string name="fpa001">مطالعے کی قسم</string>
    <string name="fpa00101">کنٹرول</string>
    <string name="fpa00102">صرف کیش</string>
    <string name="fpa00103">کیش اور پیغامات</string>
    <string name="fpa00104">کیش اور فوڈ </string>
    <string name="fpa00105">کیش/فوڈ/پیغامات</string>
    <string name="fpa002">بچے کا نام</string>
    <string name="fpa003">بچے کا شناخت نمبر </string>
    <string name="fpa00301">Arm </string>
    <string name="fpa00302">Child # </string>
    <string name="fpa004">بچے کا ماہانہ فالواپ نمبر</string>
    <string name="fpa00401">فالواپ نمبر </string>
    <string name="fpb001">کیا بچہ انٹر ویو کے لیے موجود تھا ؟ </string>
    <string name="fpb00101">موجود ہے </string>
    <string name="fpb00102"> غیر حاضر</string>
    <string name="fpb00103">مستقل ہجرت</string>
    <string name="fpb00104">انکار</string>
    <string name="fpb00105">بچے کی وفات</string>
    <string name="fpb00106">عارضی ہجرت</string>
    <string name="fpb002"> فالواپ کے وقت  عمر </string>
    <string name="fpc001">Length/Height: </string>
    <string name="fpcsubM1"> Measurement 1 </string>
    <string name="fpcsubM2"> Measurement 2 </string>
    <string name="fpcsubM3"> Measurement 3 </string>
    <string name="fpc002">Weight : </string>
    <string name="fpc003">Left mid-upper arm circumference(MUAC)</string>
    <string name="fpd001">  کیا  آپ  نے گزشتہ ایک ماہ کے دوران وا وامم موصول کی ۔   وا وامم کا ساشے دکھائیں</string>
    <string name="fpd00103">وصول کرنے سے انکار کیا</string>
    <string name="never"> ہرگز نہیں وصول کیا</string>
    <string name="fpd00102r">سبب </string>
    <string name="fpd001a">اگر انکار کیا  تو کیا وجہ تھی ؟</string>
    <string name="fpd001a01"> ذائقہ اچھا نہیں / خراب ذائقہ </string>
    <string name="fpd001a02"> دست کا سبب </string>
    <string name="fpd001a03"> قے کا سبب</string>
    <string name="fpd001a04"> پیٹ کے درد کا سبب</string>
    <string name="fpd001a05">جسم پے دانوں  کاسبب </string>
    <string name="fpd001a06">مذہب میں منع ہے</string>
    <string name="fpd001a07"> یہ خاندانی منصوبہ بندی کے لیے ہے </string>
    <string name="fpd002">آپ کو کس نے واوامم دیے؟ </string>
    <string name="fpd00201">لیڈی ہیلتھ ورکر   LHW</string>
    <string name="fpd00203">ٹیمAKU</string>
    <string name="fpd00202">معلوم نہیں </string>
    <string name="fpd003">آپ نے گزشتہ ایک ماہ میں اپنے بچے کے لیے کتنے دن واوامم کے ساشے موصول کیے ؟ </string>
    <string name="fpd00301">کتنے واوامم کے ساششے موصول کیے</string>
    <string name="fpd004">ایک دن میں آپ کے بچے نے کتنے ساششے استعمال کیے؟</string>
    <string name="fpd00401">ساششے</string>
    <string name="fpd00402">نہیں استعمال کیے /روک دیے استعمال کرنے سے </string>
    <string name="fpd004a">اگر نہیں استعمال کیے یا روک دیے تو اس کی کیا وجوہات تھی؟ </string>
    <string name="fpd004a01">ذائقہ اچھا نہیں / خراب ذائقہ </string>
    <string name="fpd004a02"> دست کا سبب </string>
    <string name="fpd004a03">قے کا سبب</string>
    <string name="fpd004a04"> پیٹ کے درد کا سبب</string>
    <string name="fpd004a05">جسم پے دانوں کاسبب </string>
    <string name="fpd004a06">مذہب میں منع ہے</string>
    <string name="fpd004a07"> یہ خاندانی منصوبہ بندی کے لیے ہے</string>
    <string name="fpd005">آپ کے بچےنے گزشتہ ایک ماہ میں کتنے دن اور کتنے واوامم استعمال کیے؟ </string>
    <string name="fpd005aa">اگر بچہ گزشتہ تیس دنوں کے دوران  تیس سے کم واوامم کھا تا ہے تو با قی دنوں کے با رے میں پوچھیں </string>
    <string name="fpd005a">بچے کی بیماری کی وجہ سے</string>
    <string name="fpd005b">بچہ روزانہ کھانے سے منع کرتا ھے </string>
    <string name="fpd005c">ماں/کخیال رکھنے والے کی لاپروائ</string>
    <string name="fpd005d">بچہ آدھے ساشے کھاتا ہے </string>
    <string name="fpd005e">ماں اور بچہ گھر میں نہیں تھے</string>
    <string name="fpd005f">وضاحت</string>
    <string name="fpd00501">ساششے</string>
    <string name="fpd006">یا آپ مجھے استعمال شدہ اور غیر استعمال شدہ   واوامم سپلیمینٹ کے  ساشے دیکھا سکتے ہیں؟ (اگر موجود نہیں تو  (00) لکھیں </string>
    <string name="fpd00601">استعمال شدہ پیکٹ دیکھائے      </string>
    <string name="fpd00602">بغیر استعمال شدہ پیکٹ دیکھائے  </string>
    <string name="fpd007">کیا آپ نے گزشتہ ایک ماہ میں واوامم سپلیمینٹ کے کوئی منفی اثرات دیکھے؟     </string>
    <string name="fpd008"> اگر ہاں تو منفی  اثرات کیا تھے؟   </string>
    <string name="fpd00801">دست  </string>
    <string name="fpd00802">قے </string>
    <string name="fpd00803">پیٹ کا درد </string>
    <string name="fpd00804"> جسم پے دانے  </string>
    <string name="fpd009">گزشتہ ایک ماہ کے دوران کیا آپ نے  واوامم  کسی اور کے ساتھ تقسیم  کیا ؟  </string>
    <string name="fpd009a">اگر ہاں تو کس کے ساتھ  تقسیم  کیا؟ </string>
    <string name="fpd009a01">بھائی /بہنوں سے </string>
    <string name="fpd009a02">پڑوسی گھروں کے ساتھ </string>
    <string name="fpd009a03">بڑوں کے ساتھ</string>
    <string name="fpd009b">گزشتہ ایک ماہ کے دوران کتنے ساشے تقسیم کیے؟  </string>
    <string name="fpd009b01">ساششے</string>
    <string name="fpd009c"> دوسرں کے ساتھ واوامم ساششے  تقسیم کرنے کی کیا وجوہات تھیں؟  </string>
    <string name="fpd009c01">منع نہیں کر سکتے  </string>
    <string name="fpd009c02">ذائقہ اچھا تھا  </string>
    <string name="fpd009c03">مجھے یقین تھا یہ دوسرے بچوں/بڑوں کے لئے فائدہ مند ہے۔</string>
    <string name="fpe001"> آپ یا آپ کے خاندان کے کسی فرد کو بینظیر انکم سپورٹ پروگرام کی طرف سے پچھلے ایک ماہ کے دوران رقم ملی؟</string>
    <string name="fpe001a">اگر ہاں تو پچھلے ماہ میں کتنی رقم ملی؟ </string>
    <string name="fpe001a01">PKR :  </string>
    <string name="fpe001b">اگر نہیں تو آخری دفعہ آپ کو   بینظیر انکم سپورٹ پروگرام کی طرف سے کب  رقم ملی تھی ۔  </string>
    <string name="fpe001b01">مہینے پہلے </string>
    <string name="fpe002">آپ نے یہ رقم کس مد میں خرچ کی ؟</string>
    <string name="fpesub">اخراجات </string>
    <string name="fpe00201">خوراک  </string>
    <string name="fpe00202">تعلیم سکول کی فیس </string>
    <string name="fpe00203">ہیلتھ / دوائی </string>
    <string name="fpe00204">ٹرانسپورٹ </string>
    <string name="fpe00205">کپڑے  </string>
    <string name="fpe002amt">رقم </string>
    <string name="fpf001">آپ کو پچھلے مہینے کے دوران صحت کی آگاہی کے حوالے سے کوئی پیغامات ملے؟  </string>
    <string name="fpf001a">اگر ہاں تو کس طرح کے پیغامات ملے؟</string>
    <string name="fpf001a01">پیدائش کےایک گھنٹے کے اندر ماں کا دودھ شروع کروانا</string>
    <string name="fpf001a02">6 ماہ تک صرف اور صرف ماہ کا دودھ پلانا</string>
    <string name="fpf001a03">6 ماہ کی عمر کے بعد اضافی خوراک شروع کروانا</string>
    <string name="fpf001a04">بچےکو متوازن خوراک کا استعمال کروانا</string>
    <string name="fpf001a05">2 سال تک بچے کو ماں کا دودھ جاری رکھنا</string>
    <string name="fpf001a06">واوامم کی افا دیت</string>
    <string name="fpf001a07">واوامم دوسروں کو نہیں دینا</string>
    <string name="fpf001a08">ماں کی خوراک / متوازن خوراک</string>
    <string name="fpf001a09">صاف پانی ٹائلٹ اور صفا ئی سے متعلق پیغامات</string>
    <string name="fpf001a10">Wash</string>
    <string name="fpf001b">صحت کی آگاہی یا   پیغامات ملنے  کا کیا زریعہ تھا ؟  </string>
    <string name="fpf001b01">میڈیا (ریڈیو/ٹی وی/ پمفلٹ/ چارٹ/انٹرنیٹ)</string>
    <string name="fpf001b02">گھرگھر لیڈی ہیلتھ ورکر کا دورہ</string>
    <string name="fpf001b03">گروپ میٹینگ لیڈی ہیلتھ ورکر کا سیشن /</string>
    <string name="fpf001b04">این جی او کی طرف سے آگاہی </string>
    <string name="fpf001b05">موبایئل پرزبانی پیغام </string>
    <string name="fpf001b06">وڈ یو سیشن </string>
    <string name="fpg001"> گزشتہ ایک ماہ کے دوران آپ کے بچے کو  ان  بیماریوں میں سے کوئی بیماری ہوئی؟ہر ایک پڑھ کے بتائیں اور لکھیں کوئی اور بیماری ؟</string>
    <string name="fpg00101">. تیز بخار </string>
    <string name="fpg00102"> اسہال</string>
    <string name="fpg00103"> کھانسی/زکام </string>
    <string name="fpg00104"> سانس لینے میں  تکلیف</string>
    <string name="fpg00105">سینہ</string>
    <string name="fpg00106"> جلد کی بیماری</string>
    <string name="fpg00107">پاخانے میں کیڑے	 </string>
    <string name="fpg00108">دھبے </string>
    <string name="fpg00109">کوئی بھی نہیں </string>
    <string name="fpg002">کیا آپ نے گزشتہ ایک ماہ میں ان بیماریوں کا علاج کروایا؟  </string>
    <string name="fpg003">آپ نےگزشتہ ماہ بیماریوں کا علاج کس  سےکروایا؟</string>
    <string name="fpgsub1">Health Personnel </string>
    <string name="fpgsub2">Other Person</string>
    <string name="fpg00301">ڈاکٹر</string>
    <string name="fpg00302">نرس/مڈوائف/ایل ایچ وی </string>
    <string name="fpg00303">کمیونٹی مڈوائف </string>
    <string name="fpg00304">دائی/ٹی بی اے  </string>
    <string name="fpg00305">لیڈی ہیلتھ ورکر </string>
    <string name="fpg00306">ہومیوپیتھک</string>
    <string name="fpg00307"> حکیم </string>
    <string name="fpg00308">ڈسپینسر/کم پائونڈر  </string>
    <string name="fph001"> کیا (بچے  کا نام) نے کل دن اور رات کے  دوران ماں کا دودھ پیا تھا؟</string>
    <string name="fph001a">کیا بچے نے اوپر دےگئے طریقوں میں سے کل دن اور رات کے اس طریقے سے دودھ پیا؟</string>
    <string name="fph001aNote">کبھی کبھی بچہ مختلف طریقوں سے ماں کا دودھ پیتا ہے؟ مثال طور: چمچ، کپ یا بوتل کے ذریعے، ایسا تب ہو تا کہ جب ماں ہر وقت بچے کے ساتھ نہیں ہوتی۔ کبھی کبھی بچے کو کوئی دوسری عورت بھی دودھ پلاتی ہے یا ماں کا دودھ چمچ ، کپ، بوتل یا کسی اور طریقے سے پلایا جاتا ہے ایسا اس وقت ہوتا ہے جب ماں دودھ پلانے کے حالت میں نہیں ہوتی </string>
    <string name="fph002"> ابھی میں آپ سے ادویات اور طاقت (وٹامن ) کے حوالے سے پوچھوں گی/گا، جو بچوں کو کبھی کبھی دیے جاتے ہیں. پچھلے ایک دن یا رات سے کیا   بچے کو وٹامن  کے قطرے یا کسی  دوسری دوائیوں کے قطرے دئے گئے۔ </string>
</resources>