<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_section_f"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.aku.hassannaqvi.cbtfollowup.activities.SectionFActivity">

    <ScrollView
        android:id="@+id/scrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="vertical"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/app_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/secF"
                android:textSize="30sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/fpf001"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/fpf001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/fpf00101"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/fpf00102"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/fpfGrp001"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/fpf001a"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/fpf001a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/fpf001a01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a01" />

                <RadioButton
                    android:id="@+id/fpf001a02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a02" />

                <RadioButton
                    android:id="@+id/fpf001a03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a03" />

                <RadioButton
                    android:id="@+id/fpf001a04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a04" />

                <RadioButton
                    android:id="@+id/fpf001a05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a05" />

                <RadioButton
                    android:id="@+id/fpf001a06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a06" />

                <RadioButton
                    android:id="@+id/fpf001a07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a07" />

                <RadioButton
                    android:id="@+id/fpf001a08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001a08" />

                <RadioButton
                    android:id="@+id/fpf001a88"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <EditText
                android:id="@+id/fpf001a88x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/other"
                android:maxLength="30"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"
                android:padding="2dp"
                android:text="@string/fpf001b"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <RadioGroup
                android:id="@+id/fpf001b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/fpf001b01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001b01" />

                <RadioButton
                    android:id="@+id/fpf001b02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001b02" />

                <RadioButton
                    android:id="@+id/fpf001b03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001b03" />

                <RadioButton
                    android:id="@+id/fpf001b04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fpf001b04" />


                <RadioButton
                    android:id="@+id/fpf001b88"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other" />

            </RadioGroup>

            <EditText
                android:id="@+id/fpf001b88x"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/other"
                android:maxLength="30"
                android:visibility="gone" />

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/end_interview"
                    android:textColor="#ff1e1e" />

                <!--'onClick' for btn_End will NOT change and always call 'endInterview'-->

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    android:text="@string/start_interview"
                    android:textColor="@color/colorPrimaryDark"
                    android:visibility="visible" />
                <!--'onClick' for btn_Continue will call next section form e.g.: openSection2-->

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>
